Modernize Spark 4.x manuscript and unify chapter guidance